6장 C++로 플러그인 만들기~바운티 대시에 파워 업 통합하기-빌드, 실행, 테스트!

--- a/Plugins/PowerUpPlugin/PowerUpPlugin.uplugin
+++ b/Plugins/PowerUpPlugin/PowerUpPlugin.uplugin
@@ -10,15 +10,15 @@
 	"DocsURL": "",
 	"MarketplaceURL": "",
 	"SupportURL": "",
-	"CanContainContent": true,
-	"IsBetaVersion": false,
-	"IsExperimentalVersion": false,
-	"Installed": false,
 	"Modules": [
 		{
 			"Name": "PowerUpPlugin",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		}
-	]
+	],
+	"EnableByDefault": true,
+	"CanContainContent": false,
+	"IsBetaVersion": false,
+	"Installed": false
 }
